# clash-ruleset-manager

./: .dockerignore  .gitignore  .npmrc  Dockerfile  README.md  TODO.md  apidoc.json  bunfig.toml  eslint.config.js  package.json  pnpm-lock.yaml  prettier.config.js  svelte.config.js  vite.config.ts  vitest-setup.ts  vitest.config.ts  vitest.workspace.ts
.github/workflows/: push-image.yml
__mocks__/: fs.cjs
__mocks__/fs/: promises.cjs
config/: app.yaml
e2e/: demo.test.ts
src/: app.css  app.d.ts  app.html  hooks.server.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  config.json  tauri.conf.json
src-tauri/migrations/: 202503291144_setup.sql  202504021220_setup.sql
src-tauri/src/: commands.rs  config.rs  error.rs  lib.rs  main.rs  schema.rs  types.rs
src/lib/: api.test.ts  api.ts  fetcher.ts  schema.d.ts  schema.ts  toast.ts  types.ts
src/lib/components/: ConfirmModal.svelte
src/lib/server/: config.test.ts  config.ts  db.ts  db_util.test.ts  db_util.ts  nodes.test.ts  nodes.ts  rules.ts
src/params/: int.ts  name.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte  RuleSetItem.svelte  RuleSetList.svelte
src/routes/[id]/: +page.svelte  +page.ts  NameEditor.svelte
src/routes/api/nodes/: +server.ts
src/routes/api/rulesets/: +server.ts
src/routes/edit/: +page.ts  NameEditor.svelte
src/routes/nodes/: +page.svelte  +page.ts  NodeGroupEditor.svelte
src/routes/rules/: +page.svelte  RuleSetCreationForm.svelte  RuleSetItem.svelte  RuleSetList.svelte  RuleSetManager.svelte
src/routes/rules/[id=int]/: +page.svelte  +page.ts  GroupEditor.svelte  (+1 more)
(+9 files in other folders)
