[package]
name = "clash-dashboard"
version = "0.1.0"
description = "Clash Node Management App"
authors = ["bruce <brucekangcn@gmail.com>"]
edition = "2024"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "clash_dashboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.release]
lto = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cfg-if = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
regex = "1.11.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite"] }
